--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "materialize": "^0.97.8",
     "director": "^1.2.8",
-    "handlebars": "^4.0.5"
+    "handlebars": "^4.0.5",
+    "tinymce": "^4.5.2"
   }
 }
